--- a/CM.Deploy.UI/Properties/Settings.settings
+++ b/CM.Deploy.UI/Properties/Settings.settings
@@ -1,7 +1,15 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="uri:settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="CM.Deploy.UI.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="EnvironmentsDirectory" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">Environments</Value>
+    </Setting>
+    <Setting Name="ConfigurationFileExtension" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">.properties</Value>
+    </Setting>
+    <Setting Name="MSBuildFilename" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">missing</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
