--- a/CM.FunctionalTests/CM.FunctionalTests.csproj
+++ b/CM.FunctionalTests/CM.FunctionalTests.csproj
@@ -59,74 +59,6 @@
     <Compile Include="Using.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\Dependencies\7-zip\7z.sfx">
-      <Link>scripts\Dependencies\7-zip\7z.sfx</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="..\Dependencies\7-zip\7zS.sfx">
-      <Link>scripts\Dependencies\7-zip\7zS.sfx</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="..\Dependencies\msbuild-community-tasks\MSBuild.Community.Tasks.chm">
-      <Link>scripts\Dependencies\msbuild-community-tasks\MSBuild.Community.Tasks.chm</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="..\Dependencies\msbuild-community-tasks\MSBuild.Community.Tasks.Targets">
-      <Link>scripts\Dependencies\msbuild-community-tasks\MSBuild.Community.Tasks.Targets</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="..\Dependencies\msbuild-community-tasks\MSBuild.Community.Tasks.xsd">
-      <Link>scripts\Dependencies\msbuild-community-tasks\MSBuild.Community.Tasks.xsd</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="..\scripts\MasterWorkflow.targets">
-      <Link>scripts\MasterWorkflow.targets</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="..\scripts\Package.targets">
-      <Link>scripts\Package.targets</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="..\scripts\Sfx.targets">
-      <Link>scripts\Sfx.targets</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="..\Dependencies\7-zip\7z.dll">
-      <Link>scripts\Dependencies\7-zip\7z.dll</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Dependencies\7-zip\7z.exe">
-      <Link>scripts\Dependencies\7-zip\7z.exe</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Dependencies\msbuild-community-tasks\ICSharpCode.SharpZipLib.dll">
-      <Link>scripts\Dependencies\msbuild-community-tasks\ICSharpCode.SharpZipLib.dll</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Dependencies\msbuild-community-tasks\ICSharpCode.SharpZipLib.xml">
-      <Link>scripts\Dependencies\msbuild-community-tasks\ICSharpCode.SharpZipLib.xml</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Dependencies\msbuild-community-tasks\Microsoft.VisualStudio.SourceSafe.Interop.dll">
-      <Link>scripts\Dependencies\msbuild-community-tasks\Microsoft.VisualStudio.SourceSafe.Interop.dll</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Dependencies\msbuild-community-tasks\MSBuild.Community.Tasks.dll">
-      <Link>scripts\Dependencies\msbuild-community-tasks\MSBuild.Community.Tasks.dll</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Dependencies\msbuild-community-tasks\MSBuild.Community.Tasks.xml">
-      <Link>scripts\Dependencies\msbuild-community-tasks\MSBuild.Community.Tasks.xml</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Dependencies\msbuild-community-tasks\NUnitReport.xsl">
-      <Link>scripts\Dependencies\msbuild-community-tasks\NUnitReport.xsl</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\CM.Common\CM.Common.csproj">
       <Project>{6E8E07C5-DD72-43B1-AC58-20D9896C481B}</Project>
       <Name>CM.Common</Name>
@@ -139,6 +71,58 @@
       <Project>{31311AFC-AD50-469B-A937-703A12016D3E}</Project>
       <Name>CM.MSBuild.Tasks</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="..\Dependencies\7-zip\7z.exe">
+      <Link>CM.NET\7z.exe</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\Dependencies\msbuild-community-tasks\MSBuild.Community.Tasks.dll">
+      <Link>CM.NET\MSBuild.Community.Tasks.dll</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\Dependencies\sdc-tasks\Microsoft.Sdc.Tasks.dll">
+      <Link>CM.NET\Microsoft.Sdc.Tasks.dll</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\Dependencies\7-zip\7zS.sfx">
+      <Link>CM.NET\7zS.sfx</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="..\scripts\Default.targets">
+      <Link>CM.NET\Default.targets</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="..\scripts\DotNet.targets">
+      <Link>CM.NET\DotNet.targets</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="..\scripts\MasterWorkflow.targets">
+      <Link>CM.NET\MasterWorkflow.targets</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="..\scripts\Package.targets">
+      <Link>CM.NET\Package.targets</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="..\scripts\Sfx.targets">
+      <Link>CM.NET\Sfx.targets</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="..\scripts\Subversion.targets">
+      <Link>CM.NET\Subversion.targets</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="..\scripts\TeamCity.targets">
+      <Link>CM.NET\TeamCity.targets</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="..\scripts\Zip.targets">
+      <Link>CM.NET\Zip.targets</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
