--- a/scripts/Sfx.targets
+++ b/scripts/Sfx.targets
@@ -17,11 +17,22 @@
   </ItemGroup>
 
   <PropertyGroup>
+    <PrePackageTargets>$(PrePackageTargets);CopyCMFiles</PrePackageTargets>
     <TraceDataTargets>$(TraceDataTargets);TraceSfxData</TraceDataTargets>
   </PropertyGroup>
 
   <UsingTask TaskName="StringReplace" AssemblyFile="$(SdcTasksDirectory)\Microsoft.Sdc.Tasks.dll" />
   <UsingTask TaskName="Microsoft.Sdc.Tasks.XmlFile.SetValue" AssemblyFile="$(SdcTasksDirectory)\Microsoft.Sdc.Tasks.dll" />
+
+  <Target Name="CopyCMFiles">
+    <ItemGroup>
+      <CMFiles Include="$(CMDirectory)\**\*" />
+    </ItemGroup>
+    <ChangeDirectoryPrefix Files="@(CMFiles)" FromPrefix="$(MSBuildProjectDirectory)" ToPrefix="$(PackageDirectory)">
+      <Output TaskParameter="TransformedFiles" ItemName="CMPackageFiles" />
+    </ChangeDirectoryPrefix>
+    <Copy SourceFiles="@(CMFiles)" DestinationFiles="@(CMPackageFiles)" />
+  </Target>
 
   <Target Name="CreatePackage">
     <Copy SourceFiles="@(DeployExe)"
