Sfx.targets now copies all CM.NET files, your environment files, the deployer files, and your build file to the package directory.  Wrote a test to verify that behavior.

--- a/scripts/Sfx.targets
+++ b/scripts/Sfx.targets
@@ -21,12 +21,15 @@
     <TraceDataTargets>$(TraceDataTargets);TraceSfxData</TraceDataTargets>
   </PropertyGroup>
 
+  <UsingTask TaskName="ChangeDirectoryPrefix" AssemblyFile="$(CMDirectory)\CM.MSBuild.Tasks.dll" />
   <UsingTask TaskName="StringReplace" AssemblyFile="$(SdcTasksDirectory)\Microsoft.Sdc.Tasks.dll" />
   <UsingTask TaskName="Microsoft.Sdc.Tasks.XmlFile.SetValue" AssemblyFile="$(SdcTasksDirectory)\Microsoft.Sdc.Tasks.dll" />
 
   <Target Name="CopyCMFiles">
     <ItemGroup>
       <CMFiles Include="$(CMDirectory)\**\*" />
+      <CMFiles Include="$(EnvironmentsDirectory)\*" />
+      <CMFiles Include="$(MSBuildProjectFullPath)" />
     </ItemGroup>
     <ChangeDirectoryPrefix Files="@(CMFiles)" FromPrefix="$(MSBuildProjectDirectory)" ToPrefix="$(PackageDirectory)">
       <Output TaskParameter="TransformedFiles" ItemName="CMPackageFiles" />
