Continuing the refactoring of the ProcessRunner.  Moved most of the process-specific logic into the SystemProcess class; ProcessRunner is now simply a factory.

--- a/CM.Common/CM.Common.csproj
+++ b/CM.Common/CM.Common.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SystemProcess.cs" />
     <Compile Include="FileSystem.cs" />
     <Compile Include="GitProvider.cs" />
     <Compile Include="ILogger.cs" />
