--- a/scripts/Sfx.targets
+++ b/scripts/Sfx.targets
@@ -63,7 +63,7 @@ RunProgram="%(DeployExe.Filename).exe"
       </SevenZipConfig>
     </PropertyGroup>
 
-    <Exec Command="$(SevenZipDirectory)\7z.exe a $(SfxDirectory)\package.7z ."
+    <Exec Command="&quot;$(SevenZipDirectory)\7z.exe&quot; a &quot;$(SfxDirectory)\package.7z&quot; ."
       WorkingDirectory="$(PackageDirectory)" />
     <WriteLinesToFile File="$(SfxDirectory)\config.txt" Lines="$(SevenZipConfig)" />
     <Exec Command="copy /b 7zS.sfx + config.txt + package.7z $(PackageName).exe" 
