--- a/CM.FunctionalTests/CM.FunctionalTests.csproj
+++ b/CM.FunctionalTests/CM.FunctionalTests.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="scripts\CMTest.cs" />
     <Compile Include="scripts\SfxTest.cs" />
+    <Compile Include="scripts\TeamCityTest.cs" />
     <Compile Include="scripts\ZipTest.cs" />
     <Compile Include="TestLogger.cs" />
     <Compile Include="Using.cs" />
