--- a/scripts/Package.targets
+++ b/scripts/Package.targets
@@ -1,33 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <!-- Properties expected to be provided, unless these defaults are OK -->
+<!--
+This file is not meant to be included directly.  It serves as the "superclass" (by importing)
+of different packaging strategies.  Application-facing targets files should import this file
+and implement the CreatePackage target.
+-->
   <PropertyGroup>
     <BuildDirectory Condition="$(BuildDirectory) == ''">$(MSBuildProjectDirectory)\build</BuildDirectory>
     <PackageDirectory Condition="$(PackageDirectory) == ''">$(BuildDirectory)\package</PackageDirectory>
+    <PackageName Condition="$(PackageName) == ''">$(MSBuildProjectName)-$(Version)</PackageName>
   </PropertyGroup>
 
   <PropertyGroup>
-    <CleanTargets>$(CleanTargets);CleanPackageDirectory</CleanTargets>
-    <PostCleanTargets>$(PostCleanTargets);CreatePackageDirectory</PostCleanTargets>
+    <CleanTargets>$(CleanTargets);ResetPackageDirectory</CleanTargets>
     <PackageTargets>$(PackageTargets);CreatePackage</PackageTargets>
-    <TraceDataTargets>$(TraceDataTargets);TracePackageData</TraceDataTargets>
   </PropertyGroup>
 
-  <Target Name="CleanPackageDirectory">
+  <Target Name="ResetPackageDirectory">
     <RemoveDir Directories="$(PackageDirectory)" Condition="Exists('$(PackageDirectory)')" />
-  </Target>
-
-  <Target Name="CreatePackageDirectory">
-    <MakeDir Directories="$(PackageDirectory)" Condition="!Exists('$(PackageDirectory)')" />
+    <MakeDir Directories="$(PackageDirectory)" />
   </Target>
 
   <Target Name="CreatePackage">
     <Error Text="Package.targets is not intended to be imported directly - it should be imported in a different packaging targets file, and the CreatePackage target must be overwritten" />
-  </Target>
-
-  <Target Name="TracePackageData">
-    <Message Text="Package.targets" />
-    <Message Text="  BuildDirectory: $(BuildDirectory)" />
-    <Message Text="  PackageDirectory: $(PackageDirectory)" />
   </Target>
 </Project>
