--- a/scripts/Subversion.targets
+++ b/scripts/Subversion.targets
@@ -6,6 +6,7 @@
 
   <Target Name="ci" DependsOnTargets="up">
     <CallTarget Targets="build" />
-    <Exec Command='"$(ProgramFiles)\TortoiseSVN\bin\TortoiseProc.exe" /command:commit /path:"$(MSBuildProjectDirectory)" /notempfile' />
+    <Exec Command='"$(ProgramFiles)\TortoiseSVN\bin\TortoiseProc.exe" /command:commit /path:"$(MSBuildProjectDirectory)" /notempfile'
+      ContinueOnError="True" />
   </Target>
 </Project>
