--- a/scripts/Zip.targets
+++ b/scripts/Zip.targets
@@ -1,13 +1,12 @@
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<!--
+Importing this file will create a zip file of all the files in the PackageDirectory.
+This is a useful strategy for libraries.
+-->
   <Import Project="Package.targets" />
-  
-  <PropertyGroup>
-    <PackageName Condition="$(PackageName) == ''">$(MSBuildProjectName)-$(Version)</PackageName>
-    <MSBuildCommunityTasksPath Condition="$(MSBuildCommunityTasksPath) == ''">$(MSBuildProjectDirectory)\Dependencies\CM.NET</MSBuildCommunityTasksPath>
-  </PropertyGroup>
 
   <PropertyGroup>
-    <TraceDataTargets>$(TraceDataTargets);TraceZipData</TraceDataTargets>
+    <MSBuildCommunityTasksPath Condition="$(MSBuildCommunityTasksPath) == ''">$(MSBuildProjectDirectory)\Dependencies\CM.NET</MSBuildCommunityTasksPath>
   </PropertyGroup>
 
   <UsingTask AssemblyFile="$(MSBuildCommunityTasksPath)\MSBuild.Community.Tasks.dll" TaskName="MSBuild.Community.Tasks.Zip" />
@@ -20,11 +19,5 @@
     <Zip Files="@(ArchiveFiles)"
       WorkingDirectory="$(PackageDirectory)"
       ZipFileName="$(BuildDirectory)\$(PackageName).zip" />
-  </Target>
-
-  <Target Name="TraceZipData">
-    <Message Text="Zip.targets" />
-    <Message Text="  PackageName: $(PackageName)" />
-    <Message Text="  MSBuildCommunityTasksPath: $(MSBuildCommunityTasksPath)" />
   </Target>
 </Project>
